src/objects/RFP_Question__c.object
<!--
Copyright (c) 2018, salesforce.com, inc., 
 All rights reserved. 
SPDX-License-Identifier: BSD-3-Clause 
For full license text, see the LICENSE file in the repo root or https: //opensource.org/licenses/BSD-3-Clause
-->

<CustomObject>
    <fields>
        <fullName>Assigned_to_Current_User__c</fullName>
        <formula>IF( Assignee__c  = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFP_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Response__c</fullName>
        <label>Compliance Response</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Question_Text__c</fullName>
        <label>RFP Question Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Response</label>
        <referenceTo>RFP_Response__c</referenceTo>
        <relationshipLabel>RFP Questions</relationshipLabel>
        <relationshipName>RFP_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <label>RFP</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>RFP Questions</relationshipLabel>
        <relationshipName>RFP_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <label>RFP Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Questions</fullName>
        <columns>RFP__c</columns>
        <columns>RFP_Question_Text__c</columns>
        <columns>RFP_Response__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Questions</label>
    </listViews>
    <nameField>
        <displayFormat>Question-{0000}</displayFormat>
        <label>RFP Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>